--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -23,6 +23,11 @@
     }},
   "groupTab.label.default": { "message": "グループ" },
 
+
+  "config.sidebarPosition.caption": { "message": "サイドバーの位置に合わせたスタイル" },
+  "config.sidebarPosition.left": { "message": "左側用" },
+  "config.sidebarPosition.right": { "message": "右側用" },
+
   "config.style.caption": { "message": "テーマ" },
   "config.style.plain": { "message": "Plain" },
   "config.style.flat": { "message": "Flat" },
