--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -37,5 +37,8 @@
   "config.style.sidebar": { "message": "Sidebar" },
 
   "config.animation.label": { "message": "Enable animation effects" },
-  "config.debug.label": { "message": "Print debug log" }
+  "config.debug.label": { "message": "Debug mode" },
+  "config.acccelaratedTabDuplication.label": { "message": "Accelarate operations around tab duplication (*NOTE: You'll see unstable behavior around tabs.)" },
+  "config.maximumAcceptableDelayForTabDuplication.before": { "message": "Abort tab duplication when it takes" },
+  "config.maximumAcceptableDelayForTabDuplication.after": { "message": "milliseconds or more." }
 }
