--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -130,5 +130,19 @@
   "config.maximumAcceptableDelayForTabDuplication.before": { "message": "Abort tab duplication when it takes" },
   "config.maximumAcceptableDelayForTabDuplication.after": { "message": "milliseconds or more." },
 
-  "config.all.caption": { "message": "All Configs" }
+  "config.all.caption": { "message": "All Configs" },
+
+
+  "migration.configs.notification.title": { "message": "Tree Style Tab: Configurations are successfully migrated" },
+  "migration.configs.notification.message": { "message": "Configurations are applied from the old version." },
+
+  "migration.tree.notification.title": { "message": "Tree Style Tab: Tree of tabs are successfully migrated" },
+  "migration.tree.notification.message.withSession": { "message": "$COUNT$ window(s) are restored completely, with previous session information.",
+    "placeholders": {
+      "count": { "content": "$1", "example": "2" }
+    }},
+  "migration.tree.notification.message.withoutSession": { "message": "$COUNT$ window(s) are restored only their tree structure. Tabs in those windows don't have any previous session information.",
+    "placeholders": {
+      "count": { "content": "$1", "example": "2" }
+    }}
 }
