--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -122,17 +122,18 @@
   "config.advanced.caption": { "message": "詳細設定" },
   "config.userStyleRules.label": { "message": "サイドバー内用の追加のスタイル指定" },
 
-
-  "config.debug.caption": { "message": "開発用" },
-  "config.debug.label": { "message": "デバッグモード" },
-  "config.acccelaratedTabDuplication.label": { "message": "タブの複製に関わる処理を高速化する（※動作が不安定になります）" },
-  "config.maximumAcceptableDelayForTabDuplication.before": { "message": "" },
-  "config.maximumAcceptableDelayForTabDuplication.after": { "message": "ミリ秒以内にタブの複製を完了できなかった場合は処理を中断する" },
-
-
+  "config.importedConfigsFromLegacy.label": { "message": "旧バージョンからの設定の移行" },
+  "config.legacyConfigsNextMigrationVersion.before": { "message": "次回初期化時に設定レベル" },
+  "config.legacyConfigsNextMigrationVersion.after": { "message": "から移行する" },
+  "config.legacyConfigsNextMigrationVersion.currentLevel.before": { "message": "（現在は設定レベル" },
+  "config.legacyConfigsNextMigrationVersion.currentLevel.after": { "message": "までの移行が可能です）" },
+  "config.importedConfigsFromLegacy.placeholder": { "message": "旧バージョンからの設定移行用データをここに貼り付けてください" },
   "migration.configs.notification.title": { "message": "ツリー型タブ：設定の移行に成功しました" },
   "migration.configs.notification.message": { "message": "旧バージョンで使用されていた設定を反映しました。" },
 
+  "config.importedTreeStructureFromLegacy.label": { "message": "旧バージョンからのツリー情報の移行" },
+  "config.migrateLegacyTreeStructure.label": { "message": "次回初期化時にツリー情報を復元する" },
+  "config.importedTreeStructureFromLegacy.placeholder": { "message": "旧バージョンからのツリー情報移行用データをここに貼り付けてください" },
   "migration.tree.notification.title": { "message": "ツリー型タブ：ツリー情報の移行に成功しました" },
   "migration.tree.notification.message.withSession": { "message": "$COUNT$個のウィンドウについて、引き継がれたツリー構造を反映しました。これらのウィンドウのタブは前回終了時の状態を完全に保持しています。",
     "placeholders": {
@@ -141,5 +142,12 @@
   "migration.tree.notification.message.withoutSession": { "message": "対応するウィンドウが見つからなかった$COUNT$個のウィンドウのツリー構造について、ウィンドウ全体を復元しました。これらのウィンドウのタブは前回終了時の情報が失われていますのでご注意下さい。",
     "placeholders": {
       "count": { "content": "$1", "example": "2" }
-    }}
+    }},
+
+
+  "config.debug.caption": { "message": "開発用" },
+  "config.debug.label": { "message": "デバッグモード" },
+  "config.acccelaratedTabDuplication.label": { "message": "タブの複製に関わる処理を高速化する（※動作が不安定になります）" },
+  "config.maximumAcceptableDelayForTabDuplication.before": { "message": "" },
+  "config.maximumAcceptableDelayForTabDuplication.after": { "message": "ミリ秒以内にタブの複製を完了できなかった場合は処理を中断する" }
 }
